--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   <br><br><br><br>
       <div class="topnav" style="background-color:rgb(207, 238, 250);border:9px solid rgb(207, 238, 250);font-size:21px;" text-align="left" width="500px">
   <br><h3 style="color:black"><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/careers/" target="_blank" style="color:blue;text-decoration:none;">Careers<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/mandatory/" target="_blank" style="color:blue;text-decoration:none;">Mandatory Disclosure and HR Policies<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/account-statements/" target="_blank" style="color:blue;text-decoration:none;">Account Statements<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/laurels/" target="_blank" style="color:blue;text-decoration:none;">Saintgits MCA College Laurels <br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/group-home/anti-ragging-policy/" target="_blank" style="color:blue;text-decoration:none;">Anti-Ragging Policy <br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/group-home/saintgits-center-for-innovation-and-entrepreneurship/" target="_blank" style="color:blue;text-decoration:none;">Saintgits Center for Innovation<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/infosys-campus-connect/" target="_blank" style="color:blue;text-decoration:none;">Infosys Campus Connect <br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/industry-institution-partnership/" target="_blank" style="color:blue;text-decoration:none;">Industry Institution Partnership<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/fee-payment/" target="_blank" style="color:blue;text-decoration:none;">Click Here for Fee Payment <br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/affiliations-and-accrediations/" target="_blank" style="color:blue;text-decoration:none;">Affiliations &amp; Accreditations<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/downloads/" target="_blank" style="color:blue;text-decoration:none;">Downloads </a><br><br><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/careers/" target="_blank" style="text-decoration:none;">Careers<br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/mandatory/" target="_blank" style="text-decoration:none;">Mandatory Disclosure and HR Policies<br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/account-statements/" target="_blank" style="text-decoration:none;">Account Statements<br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/laurels/" target="_blank" style="text-decoration:none;">Saintgits MCA College Laurels <br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/group-home/anti-ragging-policy/" target="_blank" style="text-decoration:none;">Anti-Ragging Policy <br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/group-home/saintgits-center-for-innovation-and-entrepreneurship/" target="_blank" style="text-decoration:none;">Saintgits Center for Innovation<br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/infosys-campus-connect/" target="_blank" style="text-decoration:none;">Infosys Campus Connect <br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/industry-institution-partnership/" target="_blank" style="text-decoration:none;">Industry Institution Partnership<br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/fee-payment/" target="_blank" style="text-decoration:none;">Click Here for Fee Payment <br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/affiliations-and-accrediations/" target="_blank" style="text-decoration:none;">Affiliations &amp; Accreditations<br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/downloads/" target="_blank" style="text-decoration:none;">Downloads </a><br><br><br>
      <h3><b>&nbsp;&nbsp;<u>Quick Contact</u></b></h3> <br>
   &nbsp;&nbsp;<b style="color:orangered;" style=font-size:20;text-align:justify">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
   <p style="color:navy" text-align="justify" id="right">&nbsp;&nbsp;Kottukulam Hills, Pathamuttom 
