--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/industry-institution-partnership/" target="_blank" style="text-decoration:none;">Industry Institution Partnership<br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/fee-payment/" target="_blank" style="text-decoration:none;">Click Here for Fee Payment <br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/affiliations-and-accrediations/" target="_blank" style="text-decoration:none;">Affiliations &amp; Accreditations<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/downloads/" target="_blank" style="text-decoration:none;">Downloads </a><br><br><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/downloads/" target="_blank" style="text-decoration:none;">Downloads </a><br>
      <h3><b>&nbsp;&nbsp;<u>Quick Contact</u></b></h3> <br>
   &nbsp;&nbsp;<b style="color:orangered;" style=font-size:20;text-align:justify">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
   <p style="color:navy" text-align="justify" id="right">&nbsp;&nbsp;Kottukulam Hills, Pathamuttom 
