--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   &nbsp;&nbsp;<a href="tel:+919961672222" style="color:black;text-decoration:none">+91 9961672222</a><br>
   &nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:black;text-decoration:none">ansu.mc@saintgits.org</a>
 <div align="center">
-    &emsp;&emsp;<a href="https://www.facebook.com/sharer/sharer.php?u=https://saintgits-mca.github.io/" target="_blank"><img src="https://saintgits-mca.github.io/images/facebook.webp" alt="Facebook" width="40" height="40"></a>
+    <br>&emsp;&emsp;<a href="https://www.facebook.com/sharer/sharer.php?u=https://saintgits-mca.github.io/" target="_blank"><img src="https://saintgits-mca.github.io/images/facebook.webp" alt="Facebook" width="40" height="40"></a>
     &emsp;&emsp;<a href="https://api.whatsapp.com/send?&amp;text=https://saintgits-mca.github.io/" target="_blank"><img src="https://saintgits-mca.github.io/images/whatsapp.webp" alt="Whatsapp" width="40" height="40"></a>
     &emsp;&emsp;<a href="https://twitter.com/intent/tweet?url=https://saintgits-mca.github.io/&text=Saintgits%20MCA%20Department" target="_blank"><img src="https://saintgits-mca.github.io/images/twitter.webp" alt="Twitter"  width="40" height="40"></a>
     &emsp;&emsp;<a href="https://www.linkedin.com/shareArticle?url=https://saintgits-mca.github.io/&title=Saintgits%20MCA%20Department" target="_blank"><img src="https://saintgits-mca.github.io/images/linkedin.webp" alt="Linked-in" width="40" height="40"></a>
