--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   <b>&nbsp;&nbsp;Ms. Ansu Mariam Cherian<br></b>
   &nbsp;&nbsp;Admissions Officer<br>
   &nbsp;&nbsp;<a href="tel:+919961672222" style="color:black;text-decoration:none">+91 9961672222</a><br>
-  &nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:black;text-decoration:none">ansu.mc@saintgits.org</a><br>
+  &nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:black;text-decoration:none">ansu.mc@saintgits.org</a><br><br>
   </div>
   <div class="topnav" style="background-color:rgb(32,79,179)">
       <br><center><b style="color:snow">LEARN. GROW. EXCEL</b></center>
