--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   &nbsp;&nbsp;<a href="https://saintgits.org/careers/" target="_blank" style="text-decoration:none;">Careers<br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/mandatory/" target="_blank" style="text-decoration:none;">Mandatory Disclosure and HR Policies<br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/account-statements/" target="_blank" style="text-decoration:none;">Account Statements<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/laurels/" target="_blank" style="text-decoration:none;">Saintgits MCA College Laurels <br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/saintgits-laurels/" target="_blank" style="text-decoration:none;">Saintgits MCA College Laurels <br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/group-home/anti-ragging-policy/" target="_blank" style="text-decoration:none;">Anti-Ragging Policy <br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/group-home/saintgits-center-for-innovation-and-entrepreneurship/" target="_blank" style="text-decoration:none;">Saintgits Center for Innovation<br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/resources/saintgits-center-for-innovation-and-enterpreneurship/" target="_blank" style="text-decoration:none;">Saintgits Center for Innovation<br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/infosys-campus-connect/" target="_blank" style="text-decoration:none;">Infosys Campus Connect <br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/industry-institution-partnership/" target="_blank" style="text-decoration:none;">Industry Institution Partnership<br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/fee-payment/" target="_blank" style="text-decoration:none;">Click Here for Fee Payment <br></a><br>
