--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   &nbsp;&nbsp;<a href="https://saintgits.org/saintgits-laurels/" target="_blank" style="text-decoration:none;">Saintgits MCA College Laurels <br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/group-home/anti-ragging-policy/" target="_blank" style="text-decoration:none;">Anti-Ragging Policy <br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/resources/saintgits-center-for-innovation-and-enterpreneurship/" target="_blank" style="text-decoration:none;">Saintgits Center for Innovation<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/infosys-campus-connect/" target="_blank" style="text-decoration:none;">Infosys Campus Connect <br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/mca-college/industry-institution-partnership/" target="_blank" style="text-decoration:none;">Industry Institution Partnership<br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/discover-the-campus/" target="_blank" style="text-decoration:none;">Discover Campus<br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/fee-payment/" target="_blank" style="text-decoration:none;">Click Here for Fee Payment <br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/affiliations-and-accrediations/" target="_blank" style="text-decoration:none;">Affiliations &amp; Accreditations<br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/downloads/" target="_blank" style="text-decoration:none;">Downloads </a><br>
