--- a/index.html
+++ b/index.html
@@ -1,40 +1,132 @@
+
 <!DOCTYPE html>
 <html lang="en"><head>
   <title>&ensp;Saintgits MCA Department</title>
-  <link rel="icon" href="../images/Logo.jpg"><meta name="viewport" style="width:extend-to-zoom;zoom:1.0">
+  <link rel="icon" href="../images/Logo.jpg"><meta name="viewport" content="width:extend-to-zoom;zoom:1.0">
   <link rel="canonical" href="https://saintgits-mca.github.io">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="title" content="Saintgits MCA Department">
   <meta name="description" content="MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop....">
   <meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA, Saintgits MCA Department, saintgits mca department, saintgits mca github, Saintgits-MCA, saintgits-mca, saintgits mca college, Saintgits MCA College">
   <meta name="language" content="English">
+  <style>
+  #a1{
+    color:snow;
+    text-decoration:none;
+  }
+  #center1{
+    font-size:20px;
+  }
+  .topnav{
+    background-color:red;border:9px solid red;height:50px;width:980
+  }
+  .topnav2{
+    background-color:lightgrey;
+  }
+  #marq1
+  {
+    font-size:22px;
+  }
+  #div3{
+    font-size:26px;
+  }
+.h1-1
+{
+  color:brown;
+  text-align:center;
+}
+#h4{
+  color:brown;
+}
+.plin1{
+  color:red;
+}
+.plin2
+{
+  color:blue;
+}
+.sub1
+{
+  color:darkgreen;
+}
+.list
+{
+  list-style-type:square;
+}
+.topnav3
+{
+  background-color:whitesmoke;font-family:arial;
+}
+.topnav4{
+  background-color:snow;
+}
+.topnav5
+{
+  background-color:rgb(207, 238, 250);
+  border:9px solid rgb(207, 238, 250);
+  font-size:21px;
+}
+.topnav6{
+  background-color:rgb(32,79,179);
+}
+#b1{
+  color:red;
+}
+#a2{
+  text-decoration:none;font-family=arial;
+}
+a{
+  color:blue;
+  text-decoration:none;
+}
+#b3
+{
+  color:orangered;
+  font-size:20;
+  text-align:justify;
+}
+.navy
+{
+  color:navy;
+  text-decoration:none
+}
+.black-link
+{
+  color:black;
+  text-decoration:none;
+}
+#bottomnav
+{
+ color:snow;
+}
+  </style>
    </head>
   <body>
   <img src="../images/Header-Stickers5.webp" alt="Header-Stickers5.webp" width="424px" height="125px">
   <img src="../images/Header-Stickers9.webp" alt="Header-Stickers9.webp" width="486px" height="125px" align="right">
-  <div class="topnav" style="background-color:red;border:9px solid red;height:50px;width:980" align="left">
+  <div class="topnav" >
   <br>
-  <center style="font-size:20px;"><b>
-  &ensp;<a href="https://saintgits-mca.github.io" style="color:snow;text-decoration:none;">Home</a>
-  &emsp;&ensp;<a href="https://saintgits.org/saintgits-group-of-institution/" style="color:snow;text-decoration:none;" target="_blank">About</a>
-  &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/mca-admission/" style="color:snow;text-decoration:none;" target="_blank">Admission </a>
-  &emsp;&ensp;<a href="https://saintgits.org/engineering-college/examinations/" style="color:snow;text-decoration:none;" target="_blank">Examination</a>
-  &emsp;&ensp;<a href="https://saintgits.org/campus-life/" style="color:snow;text-decoration:none;" target="_blank">Campus Life</a>
-  &emsp;&ensp;<a href="https://saintgits.org/placement/" style="color:snow;text-decoration:none;" target="_blank">Placements</a>
-  &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/faculty/" style="color:snow;text-decoration:none;" target="_blank">Faculty</a>
+  <center id="center1"><b>
+  &ensp;<a href="https://saintgits-mca.github.io" id="a1">Home</a>
+  &emsp;&ensp;<a href="https://saintgits.org/saintgits-group-of-institution/" id="a1" target="_blank">About</a>
+  &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/mca-admission/" id="a1" target="_blank">Admission </a>
+  &emsp;&ensp;<a href="https://saintgits.org/engineering-college/examinations/" id="a1" target="_blank">Examination</a>
+  &emsp;&ensp;<a href="https://saintgits.org/campus-life/" id="a1" target="_blank">Campus Life</a>
+  &emsp;&ensp;<a href="https://saintgits.org/placement/" id="a1" target="_blank">Placements</a>
+  &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/faculty/" id="a1" target="_blank">Faculty</a>
   </b></center>
   <br>
   </div>
   <center><img src="../images/Admin-Block.webp" alt="Admin-Block.webp" width="900px" height="250px"></center>
-  <div class="topnav" style="background-color:lightgrey" width="200">
-  <center><marquee behavior="scroll" direction="left" scrollamount="13" width="900px" height="70px" style="font-size:22px"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp; *** &emsp;&emsp;
+  <div class="topnav2"  width="200">
+  <center><marquee behavior="scroll" direction="left" scrollamount="13" width="900px" height="70px" id="marq1"><br><b>LATEST NEWS</b>  &emsp;&emsp;Saintgits wins the prestigious IDA – STEM Award for Community Development.&emsp;&emsp; *** &emsp;&emsp;
 ASCE Saintgits Team represented India at the ASCE Society-wide finals of Sustainable Solutions, hosted by Lousiana Tech University, Ruston, USA. &emsp;&emsp;***&emsp;&emsp;
 Rs. 76,720 CERD fund Sanctioned for Students’ Projects.&emsp;&emsp; ***&emsp;&emsp; ASCE Saintgits Student Chapter bagged Third Prize at ASCE National Concrete Canoe Competition, hosted by Punjab Engineering College, Chandigarh.&emsp;&emsp;***&emsp;&emsp;
 Saintgits faculty members dominated the All Kerala – Art of Teaching Competition organised by APJ Abdul Kalam Technological University. Bagged 4 out of 12 titles! &emsp;&emsp;&emsp;&emsp;********</marquee></center>
   </div><br>
-  <div style="font-size:26px">
-  <h1 style="color:brown;" align="center"><b>Master Of Computer Applications Department</b></h1>
-  <center><p style="color:red">============<p1 style="color:blue">=============</p1></p></center>
+  <div id="div3">
+  <h1 class="h1-1" ><b>Master Of Computer Applications Department</b></h1>
+  <center><p class="plin1">============<p1 class="plin2">=============</p1></p></center>
   
    <p align="justify">The Institute of Computer Application was founded by a group of well known academicians. They are pioneering educators, having unmatched experience in the field of education with a belief that the continuous search for knowledge is the sole path to success.<br><br> The primary focus of the institution is to expose the young minds to the world of technology, instilling in them confidence and fortitude to face new challenges that enable them to excel in their chosen fields. The college inculcates the development of all facets of the mind culminating in an intellectual and balanced personality. Our team of dedicated and caring faculty strives to widen the student’s horizon of learning thereby achieving excellent results for every student.
   <br>
@@ -42,33 +134,36 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   <br><br>
     &emsp;&nbsp;<img src="../images/IMG_20220513_151240.webp" alt="Saintgits Edge" width="720px" height="600px">
   <br><br>
-    <center><h2 style="color:Brown;">O u r  &nbsp; &nbsp; C o u r s e s</h2><b style="color:red">============<b style="color:blue">============</b></b></center><br><br>
-  <center><b style="color:darkgreen">MCA</b></center><br>
+    <center><h2 class="h1-1">O u r  &nbsp; &nbsp; C o u r s e s</h2><b class="plin1">============<b class="plin2">============</b></b></center><br><br>
+  <center><b class="sub1">MCA</b></center><br>
   <p align="justify">MCA at Saintgits is inclined more toward Application Development and thus has more emphasis on the latest programming language and tools to develop better and faster applications. We promote a learning environment that welcomes and honours men and women from diverse cultures. We let them involve themselves in intellectual inquisitiveness, explore knowledge dimensions for future application in industry, business and life.</p><br><br>
-  <b></b><b>Eligibility</b><br><br>&nbsp;&nbsp;<ul style="list-style-type:square;"><li style="font-style:italic">BCA graduate / Bachelor Degree in Computer Science Engineering or equivalent Degree</li> <br> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <b></b><ul class="list"><b>Eligibility</b><br><br><i>&nbsp;&nbsp;<li>BCA graduate / Bachelor Degree in Computer Science Engineering or equivalent Degree</li> <br> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;OR <br>
-                               <br>&nbsp;&nbsp;&nbsp;&nbsp;<li style="font-style:italic">B. Sc. / B. Com. / B. A  graduates with Mathematics at 10+2 level or at Graduation Level  in the qualifying Examination.</li><br><br></ul>
-  <center><b style="color:darkgreen">Integrated MCA</b></center><br>
+                               <br>&nbsp;&nbsp;&nbsp;&nbsp;<li>B. Sc. / B. Com. / B. A  graduates with Mathematics at 10+2 level or at Graduation Level  in the qualifying Examination.</li></i><br><br></ul>
+  <center><b class="sub1">Integrated MCA</b></center><br>
   <p align="justify">Integrated MCA is a five years programme, spanning ten semesters, approved by AICTE and affiliated to APJ Abdul Kalam Technological University, where students can be admitted to two years MCA course after three years of study of BCA course. Students are exposed to the various areas of computer applications and provide a sound practical skill which is required by leading IT companies.</p>
   <br><br>
-  <b></b><b>Eligibility</b><br><br><ul style="list-style-type:square;"><li style="font-style:italic">Passed 10+2 examination with Mathematics/ Statistics/ Accountancy as compulsory subjects.<br><br></li></ul>
+  <b></b><ul class="list"><b>Eligibility</b><br><br><i> </i><li><i>  Passed 10+2 examination with Mathematics/ Statistics/ Accountancy as compulsory subjects.</i><br><br></li></ul>
     <br>
-  <div class="topnav" style="background-color:whitesmoke;font-family:arial;" width="70px">
+  <div class="topnav3" width="70px">
   <center><img src="../images/Campus-Life-4-768x189.webp" alt="Campus Life" width="947" height="337"></center><br>
-  <center><b style="color:red"><h2>A D M I S S I O N S&emsp;O P E N</h2></b>
+  <center><b id="b1"><h2>A D M I S S I O N S&emsp;O P E N</h2></b>
       <h3>MCA&nbsp; |&nbsp;INTEGRATED &nbsp;&nbsp;MCA<br></h3>                                                                                                            
-  <h3><a href="https://saintgitsengineering.linways.com/v4/adm-applicant/login" style="text-decoration:none;font-family=arial;" target="_blank">Apply&ensp;Now&gt;&gt;</a></h3></center><br>
+  <h3><a href="https://saintgitsengineering.linways.com/v4/adm-applicant/login" id="a2" target="_blank">Apply&ensp;Now&gt;&gt;</a></h3></center><br>
   <br></div><br><br>
-    <div class="topnav" style="background-color:snow"><br><center><h2>Quick Facts</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br>
+    <div class="topnav4" ><br><center><h2>Quick Facts</h2><b class="plin1">=====<b class="plin2">=====</b></b></center><br>
       <marquee behavior="alternate" direction="left" scrollamount="13">
         <img src="../images/footer-slider13-150x150.webp" alt="footer-slider13-150x150.webp" width="250px">
   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider9-150x150.webp" alt="footer-slider9-150x150.webp" width="300px">
    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider6.webp" alt="footer-slider6-150x150.webp" width="300px">
      &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider10.webp" alt="footer-slider10-150x150.webp" width="300px">
+      &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Industry-Institution-Partnership-Thumbnail.webp" alt="Industry-Institution-Partnership-Thumbnail" width="300px" height="249px">
+  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Aboutus-Infosys-Thumb.webp" alt="Aboutus-Infosys-Thumb" width="300px" height="249px">
+  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Aakash-Thumb.webp" alt="Aakash-Thumb" width="300px" height="249px">
   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/footer-slider2-150x150.webp" alt="footer-slider2-150x150" width="300px" height="249px">
       </marquee></div>
   <br><br>
-    <br><center><h2>Placements</h2><b style="color:red">=====<b style="color:blue">=====</b></b></center><br><marquee behavior="alternate" direction="right" scrollamount="14"><img src="../images/Wipro.webp" alt="Wipro" width="237px" height="210px">
+    <br><center><h2>Placements</h2><b class="plin1">=====<b class="plin2">=====</b></b></center><br><marquee behavior="alternate" direction="right" scrollamount="14"><img src="../images/Wipro.webp" alt="Wipro" width="237px" height="210px">
   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/infy.webp" alt="infosys" width="237px" height="210px">
   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/TCS.webp" alt="TCS" width="237px" height="210px">
   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/Speridian.webp" alt="Speridian" width="237px" height="210px">
@@ -80,33 +175,32 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;<img src="../images/UST.webp" alt="UST" width="237px" height="210px">
   </marquee> </div>
   <br><br><br><br>
-      <div class="topnav" style="background-color:rgb(207, 238, 250);border:9px solid rgb(207, 238, 250);font-size:21px;" text-align="left" width="500px">
-  <h3 style="color:black"><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/careers/" target="_blank" style="text-decoration:none;">Careers<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/mandatory/" target="_blank" style="text-decoration:none;">Mandatory Disclosure and HR Policies<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/account-statements/" target="_blank" style="text-decoration:none;">Account Statements<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/saintgits-laurels/" target="_blank" style="text-decoration:none;">Saintgits MCA College Laurels <br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/group-home/anti-ragging-policy/" target="_blank" style="text-decoration:none;">Anti-Ragging Policy <br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/resources/saintgits-center-for-innovation-and-enterpreneurship/" target="_blank" style="text-decoration:none;">Saintgits Center for Innovation<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/discover-the-campus/" target="_blank" style="text-decoration:none;">Discover Campus<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/fee-payment/" target="_blank" style="text-decoration:none;">Click Here for Fee Payment <br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/affiliations-and-accrediations/" target="_blank" style="text-decoration:none;">Affiliations &amp; Accreditations<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/downloads/" target="_blank" style="text-decoration:none;">Downloads </a><br>
+      <div class="topnav5"   width="500px">
+  <br><h3><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/careers/" target="_blank" >Careers<br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/mandatory/" target="_blank" >Mandatory Disclosure and HR Policies<br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/saintgits-laurels/" target="_blank" >Saintgits MCA College Laurels <br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/group-home/anti-ragging-policy/" target="_blank" >Anti-Ragging Policy <br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/resources/saintgits-center-for-innovation-and-enterpreneurship/" target="_blank" >Saintgits Center for Innovation<br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/discover-the-campus/" target="_blank" >Discover Campus<br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/fee-payment/" target="_blank" >Click Here for Fee Payment <br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/affiliations-and-accrediations/" target="_blank" >Affiliations &amp; Accreditations<br></a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/downloads/" target="_blank" >Downloads </a><br>
      <h3><b>&nbsp;&nbsp;<u>Quick Contact</u></b></h3> <br>
-  &nbsp;&nbsp;<b style="color:orangered;" style=font-size:20;text-align:justify">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
-  <p style="color:navy" text-align="justify" id="right">&nbsp;&nbsp;Kottukulam Hills, Pathamuttom 
+  &nbsp;&nbsp;<b id="b3">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
+  <p class="navy" text-align="justify" id="right">&nbsp;&nbsp;Kottukulam Hills, Pathamuttom 
   P O <br>&nbsp;&nbsp;Kottayam, Pin-686532, Kerala <br>
-  &nbsp;&nbsp;Tel:<a href="tel:+91 481 2430349" style="color:navy;text-decoration:none"> +91 481 2430349</a>, <a href="tel:2436169" style="color:navy;text-decoration:none">2436169</a>, <a href="tel:2436170" style="color:navy;text-decoration:none">2436170</a> <br>
-  &nbsp;&nbsp;Email:<a href="mailto:mail@saintgits.org" style="color:navy;text-decoration:none">mail@saintgits.org</a> 
+  &nbsp;&nbsp;Tel:<a href="tel:+91 481 2430349" class="navy"> +91 481 2430349</a>, <a href="tel:2436169" class="navy">2436169</a>, <a href="tel:2436170" class="navy">2436170</a> <br>
+  &nbsp;&nbsp;Email:<a href="mailto:mail@saintgits.org" class="navy">mail@saintgits.org</a> 
   <br></p>
-  <h4 style="color:brown"><b>&nbsp;&nbsp;For Admission please contact:<br></b></h4>
+  <h4 id="h4"><b>&nbsp;&nbsp;For Admission please contact:<br></b></h4>
   <b>&nbsp;&nbsp;Ms. Ansu Mariam Cherian<br></b>
   &nbsp;&nbsp;Admissions Officer<br>
-  &nbsp;&nbsp;<a href="tel:+919961672222" style="color:black;text-decoration:none">+91 9961672222</a><br>
-  &nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" style="color:black;text-decoration:none">ansu.mc@saintgits.org</a><br><br>
+  &nbsp;&nbsp;<a href="tel:+919961672222" class="black-link">+91 9961672222</a><br>
+  &nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" class="black-link">ansu.mc@saintgits.org</a>
   </div>
-  <div class="topnav" style="background-color:rgb(32,79,179)">
-      <br><center><b style="color:snow">LEARN. GROW. EXCEL</b></center>
+  <div class="topnav6">
+      <br><center><b id="bottomnav">LEARN. GROW. EXCEL</b></center>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
    </div>
   
