--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="keywords" content="Saintgits, saintgits, Saintgits MCA, saintgits mca, MCA, Saintgits MCA Department, saintgits mca department, saintgits mca github, Saintgits-MCA, saintgits-mca, saintgits mca college, Saintgits MCA College">
   <meta name="language" content="English">
   <style>
-  #a1{
+  .a1{
     color:snow;
     text-decoration:none;
   }
@@ -107,13 +107,13 @@ a{
   <div class="topnav" >
   <br>
   <center id="center1"><b>
-  &ensp;<a href="https://saintgits-mca.github.io" id="a1">Home</a>
-  &emsp;&ensp;<a href="https://saintgits.org/saintgits-group-of-institution/" id="a1" target="_blank">About</a>
-  &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/mca-admission/" id="a1" target="_blank">Admission </a>
-  &emsp;&ensp;<a href="https://saintgits.org/engineering-college/examinations/" id="a1" target="_blank">Examination</a>
-  &emsp;&ensp;<a href="https://saintgits.org/campus-life/" id="a1" target="_blank">Campus Life</a>
-  &emsp;&ensp;<a href="https://saintgits.org/placement/" id="a1" target="_blank">Placements</a>
-  &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/faculty/" id="a1" target="_blank">Faculty</a>
+  &ensp;<a href="https://saintgits-mca.github.io" class="a1">Home</a>
+  &emsp;&ensp;<a href="https://saintgits.org/saintgits-group-of-institution/" class="a1" target="_blank">About</a>
+  &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/mca-admission/" class="a1" target="_blank">Admission </a>
+  &emsp;&ensp;<a href="https://saintgits.org/engineering-college/examinations/" class="a1" target="_blank">Examination</a>
+  &emsp;&ensp;<a href="https://saintgits.org/campus-life/" class="a1" target="_blank">Campus Life</a>
+  &emsp;&ensp;<a href="https://saintgits.org/placement/" class="a1" target="_blank">Placements</a>
+  &emsp;&ensp;<a href="https://saintgits.org/saintgits-institute-of-computer-applications/faculty/" class="a1" target="_blank">Faculty</a>
   </b></center>
   <br>
   </div>
