--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   {
     font-size:22px;
   }
-  #div3{
+ .div3{
     font-size:26px;
   }
 .h1-1
@@ -125,7 +125,7 @@ ASCE Saintgits Team represented India at the ASCE Society-wide finals of Sustain
 Rs. 76,720 CERD fund Sanctioned for Students’ Projects.&emsp;&emsp; ***&emsp;&emsp; ASCE Saintgits Student Chapter bagged Third Prize at ASCE National Concrete Canoe Competition, hosted by Punjab Engineering College, Chandigarh.&emsp;&emsp;***&emsp;&emsp;
 Saintgits faculty members dominated the All Kerala – Art of Teaching Competition organised by APJ Abdul Kalam Technological University. Bagged 4 out of 12 titles! &emsp;&emsp;&emsp;&emsp;********</marquee></center>
   </div><br>
-  <div id="div3">
+  <div class="div3">
   <h1 class="h1-1" ><b>Master Of Computer Applications Department</b></h1>
   <center><p class="plin1">============<p1 class="plin2">=============</p1></p></center>
   
