--- a/index.html
+++ b/index.html
@@ -77,7 +77,6 @@ font-style:italic;
   text-decoration:none;font-family=arial;
 }
 a{
-  color:blue;
   text-decoration:none;
 }
 #b3
@@ -177,7 +176,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   </marquee> </div>
   <br><br><br><br>
       <div class="topnav5"   width="500px">
-  <br><h3><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
+  <br><h3><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3>
   &nbsp;&nbsp;<a href="https://saintgits.org/careers/" target="_blank" >Careers<br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/mandatory/" target="_blank" >Mandatory Disclosure and HR Policies<br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/saintgits-laurels/" target="_blank" >Saintgits MCA College Laurels <br></a><br>
@@ -186,7 +185,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   &nbsp;&nbsp;<a href="https://saintgits.org/discover-the-campus/" target="_blank" >Discover Campus<br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/fee-payment/" target="_blank" >Click Here for Fee Payment <br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/affiliations-and-accrediations/" target="_blank" >Affiliations &amp; Accreditations<br></a><br>
-  &nbsp;&nbsp;<a href="https://saintgits.org/downloads/" target="_blank" >Downloads </a><br>
+  &nbsp;&nbsp;<a href="https://saintgits.org/downloads/" target="_blank" >Downloads </a><br><br>
      <h3><b>&nbsp;&nbsp;<u>Quick Contact</u></b></h3> <br>
   &nbsp;&nbsp;<b id="b3">SAINTGITS INSTITUTE OF COMPUTER APPLICATIONS <br></b>
   <p class="navy" text-align="justify" id="right">&nbsp;&nbsp;Kottukulam Hills, Pathamuttom 
