--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   </marquee> </div>
   <br><br><br><br>
       <div class="topnav5"   width="500px">
-  <br><h3><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3>
+  <h3><b>&nbsp;&nbsp;<u>Quick Links</u></b></h3><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/careers/" target="_blank" >Careers<br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/mandatory/" target="_blank" >Mandatory Disclosure and HR Policies<br></a><br>
   &nbsp;&nbsp;<a href="https://saintgits.org/saintgits-laurels/" target="_blank" >Saintgits MCA College Laurels <br></a><br>
