--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ Saintgits faculty members dominated the All Kerala – Art of Teaching Competiti
   &nbsp;&nbsp;Admissions Officer<br>
   &nbsp;&nbsp;<a href="tel:+919961672222" class="black-link">+91 9961672222</a><br>
   &nbsp;&nbsp;<a href="mailto:ansu.mc@saintgits.org" class="black-link">ansu.mc@saintgits.org</a>
-  <br></div>
+  </div>
   <div class="topnav6">
       <br><center><b id="bottomnav">LEARN. GROW. EXCEL</b></center>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
